--- a/_config.yml
+++ b/_config.yml
@@ -2,21 +2,5 @@
 
 title: "Vishrut Bezbarua"
 theme: jekyll-theme-minimal
-
+description: "I am a recent master's graduate in Astrophysics and Data Science from the University of Strasbourg, with a particular interest in ML/AI solutions. Apart from painting, singing and occassionally hitting the gym, I have a specific range of topics I like to read about (evolutionary biology/psychology, ancient history and political science, but I like it the most when all of them converge."
 logo: "/assets/492ee05d-735b-465f-9788-2011cc43f7db-modified.png"
-
-# Social links
-social_links:
-  - name: GitHub
-    url: https://github.com/vishrut-b
-    icon: fab fa-github
-  - name: LinkedIn
-    url: https://www.linkedin.com/in/vishrut-bezbarua
-    icon: fab fa-linkedin
-  - name: Email
-    url: mailto:vishrutbezbarua@gmail.com
-    icon: fas fa-envelope
-
-# About section
-about: >
-  I am a master's graduate in Astrophysics and Data Science from the University of Strasbourg, passionate about exploring the mysteries of the cosmos and applying data science to uncover new insights. I also enjoy painting, singing and reading non-fiction.
