--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@
 
 title: "Vishrut Bezbarua"
 theme: jekyll-theme-minimal
-description: "I am a recent master's graduate in Astrophysics and Data Science from the University of Strasbourg, with a particular interest in ML/AI solutions. Apart from painting, singing and occassionally hitting the gym, I have a specific range of topics I like to read about (evolutionary biology/psychology, ancient history and political science, but I like it the most when all of them converge.)."
+description: "I am a Data Scientist and an Astrophysicist, assymmetrically interested in Machine Learning and Artificial Intelligence with half a decade of experience in Python programming. Apart from painting, singing and occassionally hitting the gym, I have a specific range of topics I like to read about (Cybersecurity, evolutionary biology/psychology, ancient history and political science, but I like it the most when some of them converge.)."
 logo: "/assets/492ee05d-735b-465f-9788-2011cc43f7db-modified.png"
